
  [ Jonas Meurer ]
  * revert the change that for swap devices the vol_id check is run by
    default. if the swap partition is encrypted with a random key, the check
    will always fail. thanks to Mika Bostrom <bostik@bostik.iki.fi>
    (closes: #371135, #371160)
  * update and simplify the gen-ssl-key script, thanks to Markus Nass
    <generalstone@gmx.net>

 -- Jonas Meurer <mejo@debian.org>  Thu,  8 Jun 2006 14:36:10 +0200

cryptsetup (2:1.0.3-2) unstable; urgency=low

  [ David Härdeman ]
  * Add patch by Arjan Oosting <arjanoosting@home.nl) for lvm-on-cryptroot
    in initramfs scripts (closes: #362564)

  [ Jonas Meurer ]
  * install luksformat to /usr/sbin, as it depends on perl (closes: #369923)
  * use essiv cipher in luksformat, debian 2.6.16 kernels have essiv support
    compiled in (closes: #369878)
  * fix cryptsetup output, patch by David Härdeman <david@2gen.com>
    (closes: #369575)
  * add new check 'vol_id', which uses /lib/udev/vol_id from udev and supports
    checks for any known filesystem type. implement a new option checkargs in
    cryptdisks for that. suggest udev. closes one half of #370302. thanks to
    Markus Nass and Darvid Härdeman for the suggestion.
  * always check for a swap partition before running mkswap
  * updated README.Debian, Checksystem.Doc and crypttab.5.txt accordingly.
  * drop usage of strings from swap check, as it is in /usr/bin. thanks to
    Markus Nass.

 -- Jonas Meurer <mejo@debian.org>  Mon,  5 Jun 2006 18:27:07 +0200

cryptsetup (2:1.0.3-1) unstable; urgency=low

  [ Jonas Meurer ]
  * new upstream release, 1.0.3 final
    - Add alignPayload patch by Peter Palfrader (closes: #358388)
    - meaningful exitcodes and password retrying by Johannes Weißl
      (closes: #359277)
  * add 01_terminal_timeout.dpatch from Andres Salomon <dilinger@debian.org>.
    - gets rid of getpass(), which is obsolete according to manpage
    - restores the terminal state before doing the timeout (closes: #364153)