@@ -7,8 +7,12 @@ cryptsetup (2:1.0.3-3) unstable; urgency=low
     (closes: #371135, #371160)
   * update and simplify the gen-ssl-key script, thanks to Markus Nass
     <generalstone@gmx.net>
+  * move gen-ssl-key, decrypt_ssl and luksformat to debian/scripts in the
+    source.
+  * add new directory /lib/cryptsetup/scripts/ for key decryption scripts like
+    decrypt_ssl and decrypt_gpg.
 
- -- Jonas Meurer <mejo@debian.org>  Thu,  8 Jun 2006 14:36:10 +0200
+ -- Jonas Meurer <mejo@debian.org>  Thu,  8 Jun 2006 14:44:23 +0200
 
 cryptsetup (2:1.0.3-2) unstable; urgency=low
 
